# matrixise

./: Cargo.toml  Cargo.toml~  README.md  makefile
examples/: colors.rs  hello_world.rs  hello_world.rs~  stdin.rs  threads.rs  threadtest.rs  update.rs
src/: lib.rs  message.rs  streak.rs
