[package]
name = "matrixise"
version = "2.0.1"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
license = "GPL-2.0+"
description = "Turn anything into The Matrix"
readme = "README.md"
repository = "https://github.com/Shizcow/matrixise"
keywords = ["matrix", "cmatrix"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
pancurses = "0.16.1"
rand = "0.7.3"
